Update highlight color; refs #50

--- a/cabin/static/maintenance.html
+++ b/cabin/static/maintenance.html
@@ -73,7 +73,13 @@
       border-radius: 2px;
     }
     .button-arrow:hover {
-      background: #ab9960;
+      background-color: #ab7050;
+      background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ab7050), color-stop(1, #8a5a3a));
+      background-image: -webkit-linear-gradient(top, #ab7050 0%, #8a5a3a 100%);
+      background-image: -moz-linear-gradient(top, #ab7050 0%, #8a5a3a 100%);
+      background-image: -o-linear-gradient(top, #ab7050 0%, #8a5a3a 100%);
+      background-image: -ms-linear-gradient(top, #ab7050 0%, #8a5a3a 100%);
+      background-image: linear-gradient(top, #ab7050 0%, #8a5a3a 100%);
     }
     .button-arrow:after {
       position: absolute; right: 12px; top: 0; bottom: 0;
