Use png logo on maintenance page
... since it doesn't need a hover state anyway; fixes #78.

--- a/cabin/static/maintenance.html
+++ b/cabin/static/maintenance.html
@@ -112,7 +112,7 @@
 </head>
 <body>
   <div class="chunk">
-    <img src="/static/cabin-symbol.svg" width="30" height="26" alt>
+    <img src="/static/cabin-symbol.png" width="35" height="30" alt>
     <h1>Be back up<br>soon!</h1>
   </div>
 
