--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cabin</title>
+  <meta name="description" content="Cabin was a multi-disciplinary design and technology studio dedicated to holistic branding, experience design, and web development.">
 </head>
 <body>
 
