Add video loop easing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Cabin</title>
   <meta name="description" content="Former creative studio of technology partners Zak Johnson and Bek Stone.">
 </head>
